[James/37]: Moved recipe-related CSS to SCSS, fixed a bug where editing a recipe with ingredients will break the ingredient dropdown

--- a/Recipebook/wwwroot/css/sitetheme.scss
+++ b/Recipebook/wwwroot/css/sitetheme.scss
@@ -1120,3 +1120,27 @@ main {
         }
     }
 }
+
+// ------------------------
+// Dropdown and modals
+// ------------------------
+/* CSS relevant to this page only */
+.dropdown-item {
+    cursor: pointer;
+}
+
+/* todo: move this to SCSS when the time comes */
+
+.dropdown-menu {
+    background-color: #e7d7c1;
+    max-height: 300px;
+    overflow-y: scroll;
+}
+
+.modal-content {
+    background: $beige;
+}
+
+.modal-content > div {
+    border-color: $dark-brown;
+}
